--- a/SIGPO_FRONT/Views/Mantenimiento/Proyectos.cshtml
+++ b/SIGPO_FRONT/Views/Mantenimiento/Proyectos.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Proyectos";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@*<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.13/xlsx.full.min.js"></script>*@
 <style>
     /* Estilos para el checkbox personalizado */
     .checkbox-container {
@@ -68,81 +69,48 @@
 </div>
 
 <!-- modal nuevo Proyecto -->
-<div id="modalNuevoProyecto" class="modal fade" tabindex="-1">
-    <div class="modal-dialog modal-lg">
+<div id="modalNuevoProyecto" class="modal fade" tabindex="-1" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-xl">
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="modal-title">Registrar Proyecto</h3>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <!-- Botón de cierre -->
+                <button id="btnCerrar" type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
 
             <div class="modal-body">
-                <form class="row g-3 mb-3">
+                <form id="NuevoProyecto" class="row g-3 mb-3">
 
                     <div class="col-md-12">
-                        <label for="vNombreProyecto" class="form-label">Nombre del Proyecto</label>
+                        <label for="vNombreProyecto" class="form-label font-weight-bold">Nombre del Proyecto</label>
                         <input type="text" class="form-control" id="vNombreProyecto">
                     </div>
                     <div class="col-md-3">
-                        <label for="vCUI" class="form-label">CUI</label>
+                        <label for="vCUI" class="form-label font-weight-bold">CUI</label>
                         <input type="text" class="form-control" id="vCUI">
                     </div>
 
                     <div class="col-md-9">
-                        <label for="cmbUnidadOrga" class="form-label">Unidad Formuladora</label>
+                        <label for="cmbUnidadOrga" class="form-label font-weight-bold">Unidad Formuladora</label>
 
                         <select id="cmbUnidadOrga" class="form-select" aria-label="Default select example">
                             <option selected>Seleccione</option>
 
                         </select>
                     </div>
-                    <h6 class="h6 mb-0 text-gray-800">Seleccione el Ambito de accion del proyecto</h6>
+                    <div class="mb-12">
+                        <div class="mb-3">
+                            <label for="archivo" class="form-label font-weight-bold">Seleccionar Archivo de Componentes/Acciones/Actividades</label>
+                            <input type="file" class="form-control" id="archivo" name="archivo" accept=".xls,.xlsx">
+                            <small class="text-muted">Solo se permiten archivos Excel (.xls, .xlsx)</small>
+                        </div>
+                    </div>
 
-                    <div class="col-md-4">
-                        <div class="table-responsive" style="height: 200px; overflow-y: auto;">
-                            <table id="tablaDepartamento" class="table table-sm table-bordered table-striped">
-                                <thead style="position: sticky; top: 0; background-color: #fff; z-index: 1;">
-                                    <tr>
-                                        <th>Departamento</th>
-                                        <th class="text-center">Estado</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="cuerpoDepartamento" style="position: sticky; top: 40px; background-color: #fff;">
-                                    <!-- Aquí se agregarán las filas dinámicamente -->
-                                </tbody>
-                            </table>
-                        </div>
+                    <div class="table-responsive">
+                        <table id="tablaComponentes" class="table table-sm table-bordered table-striped ">
+                        </table>
                     </div>
-                    <div class="col-md-4">
-                        <div class="table-responsive" style="height: 200px; overflow-y: auto;">
-                            <table id="tablaProvincia" class="table table-sm table-bordered table-striped">
-                                <thead style="position: sticky; top: 0; background-color: #fff; z-index: 1;">
-                                    <tr>
-                                        <th>Provincia</th>
-                                        <th class="text-center">Estado</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="cuerpoProvincia" style="position: sticky; top: 40px; background-color: #fff;">
-                                    <!-- Aquí se agregarán las filas dinámicamente -->
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="table-responsive" style="height: 200px; overflow-y: auto;">
-                            <table id="tablaDistrito" class="table table-sm table-bordered table-striped">
-                                <thead style="position: sticky; top: 0; background-color: #fff; z-index: 1;">
-                                    <tr>
-                                        <th>Distrito</th>
-                                        <th class="text-center">Estado</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="cuerpoDistrito" style="position: sticky; top: 40px; background-color: #fff;">
-                                    <!-- Aquí se agregarán las filas dinámicamente -->
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+
                     <div class="col-12 mb-2"><hr /></div>
                 </form>
                 <div class="mb-3">
@@ -152,53 +120,73 @@
         </div>
     </div>
 </div>
-<!-- /modal nuevo usuario -->
-<!-- modal editar usuario -->
-<div id="modalEditarUsuario" class="modal fade" tabindex="-1">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Editar Usuario</h5>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-            </div>
 
-            <div class="modal-body">
-                <form class="row g-3 mb-3">
-                    <div class="col-md-6">
-                        <label for="vUsuarioEditar" class="form-label">vUsuario</label>
-                        <input type="text" class="form-control" id="vUsuarioEditar">
-                    </div>
-                    <div class="col-md-6">
-                        <label for="vCorreoEditar" class="form-label">vCorreo</label>
-                        <input type="text" class="form-control" id="vCorreoEditar">
-                    </div>
-                    <div class="col-12 mb-2"><hr /></div>
-                    <div class="col-md-3">
-                        <label for="vDNIEditar" class="form-label">DNI</label>
-                        <input type="text" class="form-control" id="vDNIEditar">
-                    </div>
-                    <div class="col-md-3">
-                        <label for="vNombresEditar" class="form-label">Nombres</label>
-                        <input type="text" class="form-control" id="vNombresEditar">
-                    </div>
-                    <div class="col-md-3">
-                        <label for="vApellidoPaternoEditar" class="form-label">Apellido Paterno</label>
-                        <input type="text" class="form-control" id="vApellidoPaternoEditar">
-                    </div>
-                    <div class="col-md-3">
-                        <label for="vApellidoMaternoEditar" class="form-label">Apellido Materno</label>
-                        <input type="text" class="form-control" id="vApellidoMaternoEditar">
-                        <input type="hidden" id="usuarioIDEditar">
-                    </div>
-                </form>
-                <div class="mb-3">
-                    <button id="btneditarUsuario" type="button" class="btn btn-block btn-primary"><i class="fas fa-fw fa-save"></i> Guardar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- /modal editar usuario -->
-<script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+
+<script type="text/javascript" src="https://unpkg.com/xlsx@0.15.1/dist/xlsx.full.min.js"></script>
+@*<script src="https://cdn.datatables.net/select/1.3.4/js/dataTables.select.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>*@
+
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/select/1.3.4/js/dataTables.select.min.js"></script>
+<script src="https://cdn.datatables.net/rowreorder/1.2.8/js/dataTables.rowReorder.min.js"></script>
+@*<script src="https://editor.datatables.net/extensions/Editor/js/dataTables.editor.min.jss"></script>*@
+
+
+
+
+
 <script src="~/Scripts/Mantenimiento/Proyectos.js"></script>
 
+
+
+
+
+<!--<h6 class="h6 mb-0 text-gray-800">Seleccione el Ambito de accion del proyecto</h6>
+
+<div class="col-md-4">
+    <div class="table-responsive" style="height: 200px; overflow-y: auto;">
+        <table id="tablaDepartamento" class="table table-sm table-bordered table-striped">
+            <thead style="position: sticky; top: 0; background-color: #fff; z-index: 1;">
+                <tr>
+                    <th>Departamento</th>
+                    <th class="text-center">Estado</th>
+                </tr>
+            </thead>
+            <tbody id="cuerpoDepartamento" style="position: sticky; top: 40px; background-color: #fff;">-->
+<!-- Aquí se agregarán las filas dinámicamente -->
+<!--</tbody>
+        </table>
+    </div>
+</div>
+<div class="col-md-4">
+    <div class="table-responsive" style="height: 200px; overflow-y: auto;">
+        <table id="tablaProvincia" class="table table-sm table-bordered table-striped">
+            <thead style="position: sticky; top: 0; background-color: #fff; z-index: 1;">
+                <tr>
+                    <th>Provincia</th>
+                    <th class="text-center">Estado</th>
+                </tr>
+            </thead>
+            <tbody id="cuerpoProvincia" style="position: sticky; top: 40px; background-color: #fff;">-->
+<!-- Aquí se agregarán las filas dinámicamente -->
+<!--</tbody>
+        </table>
+    </div>
+</div>
+<div class="col-md-4">
+    <div class="table-responsive" style="height: 200px; overflow-y: auto;">
+        <table id="tablaDistrito" class="table table-sm table-bordered table-striped">
+            <thead style="position: sticky; top: 0; background-color: #fff; z-index: 1;">
+                <tr>
+                    <th>Distrito</th>
+                    <th class="text-center">Estado</th>
+                </tr>
+            </thead>
+            <tbody id="cuerpoDistrito" style="position: sticky; top: 40px; background-color: #fff;">-->
+<!-- Aquí se agregarán las filas dinámicamente -->
+<!--</tbody>
+        </table>
+    </div>
+</div>-->
