--- a/SIGPO_FRONT/Views/Mantenimiento/Proyectos.cshtml
+++ b/SIGPO_FRONT/Views/Mantenimiento/Proyectos.cshtml
@@ -101,7 +101,8 @@
                     <div class="mb-12">
                         <div class="mb-3">
                             <label for="archivo" class="form-label font-weight-bold">Seleccionar Archivo de Componentes/Acciones/Actividades</label>
-                            <input type="file" class="form-control" id="archivo" name="archivo" accept=".xls,.xlsx">
+                            <input type="file" class="form-control" id="archivo" name="archivo" accept=".xls,.xlsx" ><br>
+                            @*<button id="seleccionarArchivoBtn" class="btn btn-primary">Seleccionar Archivo</button><br>*@
                             <small class="text-muted">Solo se permiten archivos Excel (.xls, .xlsx)</small>
                         </div>
                     </div>
