--- a/SIGPO_FRONT/Views/Planificacion/Index.cshtml
+++ b/SIGPO_FRONT/Views/Planificacion/Index.cshtml
@@ -6,7 +6,7 @@
 
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-center mb-4">
-    <h1 class="h3 mb-0 text-gray-800 ">REGISTRO DE METAS FÍSICAS</h1>
+    <h1 class="h3 mb-0 text-gray-800 ">METAS FISICAS POR PERIODO</h1>
 </div>
 
 @*<div class="row bt-3 mb-3">
